[package]
name = "bounty-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "21.0.0"

[[bin]]
name = "bounty-contract"
path = "src/lib.rs"

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true